# possible_object

./: .gitignore  CMakeLists.txt  InitShader.cpp  InitShader.h  README.md  claude.md  fshader.glsl  imposible  main.cpp  main2.cpp  my_math.h  posible  vshader.glsl
shaders/: fshader.glsl  fshader_bg.glsl  fshader_bloom.glsl  fshader_blur.glsl  fshader_bright.glsl  fshader_new.glsl  fshader_simple.glsl  vshader.glsl  vshader_new.glsl  vshader_quad.glsl  vshader_simple.glsl
src/: arch.cpp  impossible_polygon.cpp  impossible_polygon.h  includes.h  main.cpp  main2.cpp  neckercube.cpp  neckercube.h  penrose.cpp  penrose.h  penrose_blocks.cpp  staircase.cpp  staircase.h
util/: InitShader.cpp  InitShader.h  includes.h  my_math.h
